tests/miniJava/neg/003560_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( 0 class java { } { } else { } } }
